<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">AMP</string>
    <string name="submit">Submit</string>
    <string name="survey_title">Parking Lot Survey</string>
    <string name="role_prompt">Your Role</string>
    <string name="priorities_prompt">What are your top priorities for a Parking Lot Mobile App?</string>
    <string name="real_time_updates_prompt">How important is it for the app to provide real-time updates on parking availability?</string>
    <string name="reserve_parking_value_prompt">How important is the reservation value?</string>
    <string name="event_integration_prompt">How important is event integration?</string>
    <string name="user_reviews_prompt">How important are user reviews?</string>
    <string name="find_car_feature_prompt">How interested are you in a feature to find your parked car?</string>
    <string name="app_usability_prompt">How would you rate the usability of the app?</string>
    <string name="customer_support_prompt">How important is customer support to you?</string>
    <string name="biggest_concern_prompt">What is your biggest concern regarding the app?</string>
    <string name="additional_features_prompt">Are there any additional features you’d like to see?</string>
    <string name="other_comments_prompt">Any other comments or suggestions?</string>
    <string name="real_time_updates">Real-time parking availability updates</string>
    <string name="accurate_navigation">Accurate navigation to parking spots</string>
    <string name="notifications">Notifications about lot status (e.g., full, empty)</string>
    <string name="event_integration">Integration with campus events</string>
    <string name="reservation_system">Reservation system for parking spots</string>
    <string name="user_reviews">User reviews and ratings of parking lots</string>
    <string name="payment_options">Payment options for parking fees</string>
    <string name="parking_lot_features">Detailed information on parking lot features (e.g., security, amenities)</string>
    <string name="submit_review">Submit Review</string>
    <string name="title_activity_maps">Maps Activity</string>
    <string name="biggest_concern_hint">What is your biggest concern?</string>
    <string name="additional_features_hint">Additional features you’d like to see:</string>
    <string name="other_comments_hint">Other comments:</string>
    <string name="parking_lot_details">Parking Lot Details</string>
    <string name="rate_specific_aspects">Rate Specific Aspects</string>
    <string name="write_your_review_here">Write your review here…</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="petition_title">Submit Petition</string>
    <string name="pay_parking_meter">Pay Parking Meter</string>
    <string name="select_parking_lot_title">Select Parking Lot</string>
    <string name="notifications_title">Notifications</string>
    <string name="event_title">Event Title</string>
    <string name="event_details_go_here">Event Details go here.</string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="info_icon_desc">Info icon to explain marker colors</string>
    <string name="open_drawer">Open Navigation Drawer</string>
    <string name="describe_your_petition">Describe your petition</string>
    <string name="suggest_a_grace_period_optional">Suggest a grace period (optional)</string>
    <string name="click_on_a_parking_lot_to_pay_for_parking">Click on a parking lot to pay for parking.</string>
    <string name="amount_paid_0_00">Amount Paid: $0.00</string>
    <string name="time_remaining_00_00">Time Remaining: 00:00</string>
    <string name="parking_lot_name">Parking Lot Name</string>
    <string name="cost_0_0">Cost: $0.0</string>
    <string name="rating_0_0">Rating: 0.0</string>
    <string name="take_a_survey">Take a Survey</string>
    <string name="submit_a_petition">Submit a Petition</string>
    <string name="filter">Filter</string>
    <string name="filter_parking_options">Filter Parking Options</string>
    <string name="cost_filter">Cost Filter</string>
    <string name="availability_filter">Availability Filter</string>
    <string name="proximity_filter">Proximity Filter</string>
    <string name="rating_filter">Rating Filter</string>
    <string name="address_filter">Address Filter</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="proximity_0_ft">Proximity: 0 ft</string>
    <string name="cost_select_this_filter_to_show_parking_lots_within_a_certain_price_range">Cost: Select this filter to show parking lots within a certain price range.</string>
    <string name="availability_select_this_filter_to_show_parking_lots_that_are_at_least_a_certain_percentage_full">Availability: Select this filter to show parking lots that are at least a certain percentage full.</string>
    <string name="proximity_select_this_filter_to_show_parking_lots_that_are_within_a_certain_distance_from_your_location">Proximity: Select this filter to show parking lots that are within a certain distance from your location.</string>
    <string name="rating_select_this_filter_to_show_parking_lots_based_on_their_ratings">Rating: Select this filter to show parking lots based on their ratings.</string>
    <string name="address_select_this_filter_to_show_parking_lots_with_their_respective_addresses">Address: Select this filter to show parking lots with their respective addresses.</string>
    <string name="view_parking_timer_simulator">View Parking Timer Simulator</string>
    <string name="selected_time_0h_0m">Selected Time: 0h 0m</string>
    <string name="start_budget_simulator">Start Budget Simulator</string>
    <string name="select_semester_start_and_end_dates">Select Semester Start and End Dates</string>
    <string name="start_date">Start Date:</string>
    <string name="select_start_date">Select Start Date</string>
    <string name="end_date">End Date:</string>
    <string name="select_end_date">Select End Date</string>
    <string name="parking_meter_simulator">Parking Meter Simulator</string>
    <string name="parking_lot_chosen">Parking Lot Chosen:</string>
    <string name="filter_options_are_based_on_historical_data_and_ai_simulations">Filter options are based on historical data and AI simulations</string>
    <string name="settings">Settings</string>
    <string name="change_language">Change Language</string>
    <string name="back">Back</string>
    <string name="choose_a_language" translatable="false">Choose a Language</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="parking_budget_simulator">Parking Budget Simulator</string>
    <string name="chat">Chat</string>
    <string name="submit_a_review">Submit a Review</string>
    <string name="Notifications">Notifications</string>
    <string name="back_to_maps">Back to Maps</string>
    <string name="total_reviews_0">Total Reviews: 0</string>
    <string name="average_rating_0_0">Average Rating: 0.0</string>
    <string name="submit_petition">Submit Petition</string>
    <string name="total_cost_0_00">Total cost: $0.00</string>
    <string name="cost_for_2_hours_30_minutes_5_35">Cost for 2 hours 30 minutes: $5.35</string>
    <string name="confirm">Confirm</string>
    <string name="select_budget_type">Select Budget Type</string>
    <string name="daily_budget">Daily Budget</string>
    <string name="semester_budget">Semester Budget</string>
    <string name="next">Next</string>
    <string name="time_remaining_02d_02d">Time Remaining: %02d:%02d</string>
    <string name="amount_paid_2f">Amount Paid: $%.2f</string>
    <string name="time_s_up">Time\'s up!</string>
    <string name="parking_time_expired">Parking time expired!</string>
    <string name="payment_active">payment_active</string>
    <string name="ease_of_finding_spot">Ease of Finding Spot</string>
    <string name="security">Security</string>
    <string name="cleanliness">Cleanliness</string>
    <string name="please_select_a_parking_lot">Please select a parking lot</string>
    <string name="review_submitted_successfully">Review submitted successfully</string>
    <string name="error_submitting_review">Error submitting review</string>
    <string name="please_provide_a_rating_and_comment">Please provide a rating and comment</string>
    <string name="average_rating">Average Rating: %1$s</string>
    <string name="total_reviews" tools:ignore="StringFormatMatches">Total Reviews: %1$s</string>
    <string name="error_fetching_reviews">Error fetching reviews</string>
    <string name="dogwood_parking_lot">Dogwood Parking Lot</string>
    <string name="tivoli_parking_lot">Tivoli Parking Lot</string>
    <string name="cherry_parking_lot">Cherry Parking Lot</string>
    <string name="spruce_parking_lot">Spruce Parking Lot</string>
    <string name="fir_parking_lot">Fir Parking Lot</string>
    <string name="nutmeg_lot">Nutmeg Lot</string>
    <string name="boulder_creek">Boulder Creek</string>
    <string name="elm_parking_lot">Elm Parking Lot</string>
    <string name="_7th_street_garage">7th Street Garage</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="chinese">Chinese</string>
    <string name="german">German</string>
    <string name="confirm_language_change">Confirm Language Change</string>
    <string name="are_you_sure_you_want_to_change_the_language">Are you sure you want to change the language?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="selected" tools:ignore="PrivateResource">Selected: %1$s</string>
    <string name="please_describe_your_petition">Please describe your petition.</string>
    <string name="petition_submitted_successfully">Petition submitted successfully.</string>
    <string name="failed_to_submit_petition">Failed to submit petition: %1$s</string>
    <string name="invalid_date_range">Invalid date range.</string>
    <string name="start_and_end_dates_are_required_for_semester_budget">Start and end dates are required for semester budget.</string>
    <string name="starting_budget_simulation_for_over_minutes">Starting budget simulation for $%1$s over %2$s minutes!</string>
    <string name="days_selected">Days Selected: %1$s</string>
    <string name="total_cost">Total Cost: $%1$s</string>
    <string name="amp_project_team_amp_license">AMP Project Team &amp; License</string>
    <string name="vision_statement">Vision Statement</string>
    <string name="team_members">Team Members</string>
    <string name="team_members_details" tools:ignore="TypographyDashes">This project was created by seniors at MSU Denver as part of a proposal for CS-4360-002 during the Fall 2024 semester.\n\nMichael Bates – Project Manager, responsible for coordinating the team and ensuring project deadlines are met.\n\nWilliam Maddock – Lead Developer, overseeing technical development and implementation.\n\nAaron Nkouka – Feature-Driven Development (FDD), focused on key feature implementations.\n\nSeth Jones – Feature-Driven Development (FDD), assisting in developing specific app features.\n\nMilagros Hernandez-Vasquez – Feature-Driven Development (FDD), working on app enhancements.\n\nSayizana Worku – Feature-Driven Development (FDD), supporting feature creation and refinement.</string>
    <string name="license">License</string>
    <string name="this_project_is_licensed_under_the_creative_commons_attribution_noncommercial_sharealike_4_0_international_license_cc_by_nc_sa_4_0">This project is licensed under the Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License (CC BY-NC-SA 4.0).</string>
    <string name="_2024_amp_team_https_creativecommons_org_licenses_by_nc_sa_4_0">© 2024 AMP Team - [https://creativecommons.org/licenses/by-nc-sa/4.0/]</string>
    <string name="acknowledge">Acknowledge</string>
</resources>