<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_budget_type"
        android:textSize="18sp"
        android:layout_marginBottom="16dp" />

    <RadioGroup
        android:id="@+id/budget_type_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radio_daily_budget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daily_budget" />

        <RadioButton
            android:id="@+id/radio_semester_budget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/semester_budget" />
    </RadioGroup>

    <Button
        android:id="@+id/next_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next" />
</LinearLayout>