<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/splash_background_lightning">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/amp_project_team_amp_license"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_marginTop="8dp"
            android:text="@string/vision_statement"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white" />

        <TextView
            android:text="@string/our_vision_is_to_transform_the_parking_experience_for_students_staff_faculty_and_visitors_at_msu_denver_through_an_intuitive_efficient_and_comprehensive_mobile_solution_auraria_mobile_parking_amp_will_empower_users_to_seamlessly_navigate_and_manage_parking_on_the_auraria_campus_with_ease."
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_marginTop="16dp"
            android:text="@string/team_members"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team_members_details"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_marginTop="16dp"
            android:text="@string/license"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white" />

        <TextView
            android:text="@string/this_project_is_licensed_under_the_creative_commons_attribution_noncommercial_sharealike_4_0_international_license_cc_by_nc_sa_4_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/linkTextView"
            android:layout_marginTop="8dp"
            android:text="@string/_2024_amp_team_https_creativecommons_org_licenses_by_nc_sa_4_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:autoLink="web"
            android:linksClickable="true"
            android:textStyle="bold" />

        <!-- Acknowledge Button -->
        <Button
            android:id="@+id/acknowledgeButton"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acknowledge"
            android:backgroundTint="@color/teal_200"
            android:textColor="@android:color/background_dark" />

    </LinearLayout>
</ScrollView>