<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/drawer_background"
    tools:ignore="Overdraw"> <!-- Set the background -->

    <!-- TextView for displaying the amount paid -->
    <TextView
        android:id="@+id/amount_paid_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount_paid_0_00"
        android:textSize="24sp"
        android:textColor="@android:color/white"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginTop="32dp"/>

    <!-- TextView for displaying the remaining time -->
    <TextView
        android:id="@+id/timer_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_remaining_00_00"
        android:textSize="30sp"
        android:textColor="@android:color/white"
    app:layout_constraintTop_toBottomOf="@id/amount_paid_text_view"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginTop="32dp"/>

    <!-- Button to navigate back to the maps -->
    <Button
        android:id="@+id/back_to_maps_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/back_to_maps"
        android:textColor="@android:color/white"
    app:layout_constraintTop_toBottomOf="@id/timer_text_view"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginTop="32dp"
    tools:ignore="HardcodedText" />

</androidx.constraintlayout.widget.ConstraintLayout>